[package]
name = "egui-android"
version = "0.1.0"
authors = ["William Casarin <jb55@jb55.com>"]
edition = "2021"

[dependencies]
egui = "0.19.0"

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
chrono = "0.4"
egui = "0.19.0"
epi = "0.17.0"
log = "0.4.17"
pollster = "0.2"
egui_wgpu_backend = "0.20.0"
wgpu = "0.14.0"
winit = { git="https://github.com/rust-windowing/winit.git", default-features = false, features = ["android-native-activity"] }
egui_winit_platform = {git = "https://github.com/inferrna/egui_winit_platform.git"}
